"""create user_periods table

Revision ID: 786e5c05fb89
Revises: 4e1501ea2d2c
Create Date: 2026-08-01 01:02:14.906156+00:00

"""

from typing import Sequence, Union

import sqlalchemy as sa

import sarc.db.sqlmodel
from alembic import op

# revision identifiers, used by Alembic.
revision: str = "786e5c05fb89"
down_revision: Union[str, Sequence[str], None] = "4e1501ea2d2c"
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "user_periods",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("user_id", sa.Integer(), nullable=False),
        sa.Column("cluster_id", sa.Integer(), nullable=False),
        sa.Column(
            "start_date", sarc.db.sqlmodel.UTCDateTime(timezone=True), nullable=False
        ),
        sa.Column(
            "end_date", sarc.db.sqlmodel.UTCDateTime(timezone=True), nullable=False
        ),
        sa.Column("sm_occ_mean", sa.Float(), nullable=False),
        sa.Column("rgu_hours", sa.Float(), nullable=False),
        sa.Column("unused_rguh", sa.Float(), nullable=False),
        sa.Column("isunderuser", sa.Boolean(), nullable=False),
        sa.Column("flagged", sa.Boolean(), nullable=False),
        sa.Column("elevated", sa.Boolean(), nullable=False),
        sa.ForeignKeyConstraint(["cluster_id"], ["clusters.id"]),
        sa.ForeignKeyConstraint(["user_id"], ["users.id"]),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("user_id", "cluster_id", "end_date"),
    )
    op.create_index(
        op.f("ix_user_periods_cluster_id"), "user_periods", ["cluster_id"], unique=False
    )
    op.create_index(
        op.f("ix_user_periods_end_date"), "user_periods", ["end_date"], unique=False
    )
    op.create_index(
        op.f("ix_user_periods_user_id"), "user_periods", ["user_id"], unique=False
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f("ix_user_periods_user_id"), table_name="user_periods")
    op.drop_index(op.f("ix_user_periods_end_date"), table_name="user_periods")
    op.drop_index(op.f("ix_user_periods_cluster_id"), table_name="user_periods")
    op.drop_table("user_periods")
    # ### end Alembic commands ###
