from dataclasses import dataclass
from datetime import datetime

from .job import SlurmState
from .user import MemberType


@dataclass(kw_only=True)
class JobSeries:
    job_db_id: int

    # job identification
    cluster_id: int
    account: str
    job_id: int
    array_job_id: int | None
    task_id: int | None
    name: str
    cluster_user: str
    group: str

    # status
    job_state: SlurmState
    exit_code: int | None
    signal: int | None

    # allocation information
    partition: str
    nodes: list[str]

    work_dir: str
    submit_line: str | None

    # Miscellaneous
    constraints: str | None
    priority: int | None
    qos: str | None

    # Flags
    CLEAR_SCHEDULING: bool
    STARTED_ON_SUBMIT: bool
    STARTED_ON_SCHEDULE: bool
    STARTED_ON_BACKFILL: bool
    JOB_ALTERED: bool

    # temporal fields
    time_limit: int | None
    submit_time: datetime
    start_time: datetime | None
    end_time: datetime | None
    elapsed_time: float

    # tres
    requested_cpu: int | None
    requested_mem: int | None
    requested_node: int | None
    requested_billing: int | None
    requested_gres_gpu: int | None
    requested_gpu_type: str | None

    allocated_cpu: int | None
    allocated_mem: int | None
    allocated_node: int | None
    allocated_billing: int | None
    allocated_gres_gpu: int | None
    allocated_gpu_type: str | None
    harmonized_gpu_type: str | None

    # User ID
    sarc_user_id: int

    # Cost / waste (computed by the JobSeriesDB view). cpu_* are CPU-seconds;
    # requested_gpu_cost/requested_gpu_waste are RGU-seconds from the raw
    # requested GPU count, allocated_gpu_* and gpu_overbilling_cost RGU-seconds
    # from the raw allocated GPU count — count-based cost, not billing cost.
    # requested_rgu/allocated_rgu below (see sarc/db/job_series.py) are the
    # equivalent per-job, non-time-integrated RGU-count metrics: requested_rgu
    # from the (coalesced) requested GPU count, allocated_rgu from the
    # (coalesced) allocated count.
    requested_cpu_cost: float | None
    requested_cpu_waste: float | None
    allocated_cpu_cost: float | None
    allocated_cpu_waste: float | None
    cpu_overbilling_cost: float | None
    requested_gpu_cost: float | None
    requested_gpu_waste: float | None
    allocated_gpu_cost: float | None
    allocated_gpu_waste: float | None
    gpu_overbilling_cost: float | None
    usage_metric: float | None

    # Optional extra fields

    gpu_sm_occupancy_mean: float | None = None
    gpu_sm_occupancy_max: float | None = None
    gpu_utilization_mean: float | None = None
    gpu_memory_max: float | None = None

    cluster_name: str | None = None
    reservation: str | None = None
    gpu_type_rgu: float | None = None
    gpu_type_rgu_drac: float | None = None
    requested_rgu: float | None = None
    requested_rgu_drac: float | None = None
    allocated_rgu: float | None = None
    allocated_rgu_drac: float | None = None
    display_name: str | None = None
    email: str | None = None
    member_type: MemberType | None = None
    supervisors: list[int] | None = None
